# recipes

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: CONTRIBUTING.md
backend/app/: __init__.py  auth.py  catalog_match.py  config.py  cooklang.py  density_estimate.py  extract.py  fireworks_llm.py  import_context.py  import_validate.py  importer.py  ingredient_inflection.py  ingredients.py  ingredients_seed.json  main.py  manifest.py  models.py  non_ingredients.py  page_fetch.py  search.py  sources.py  storage.py  units.py
backend/tests/: test_api_auth.py  test_catalog_match.py  test_cheftap_import.py  test_cooklang.py  test_cooklang_refs.py  test_density_estimate.py  test_extract.py  test_fireworks_llm.py  test_import_context.py  test_import_upload.py  test_importer.py  test_ingredient_rename.py  test_ingredients.py  test_manifest.py  test_non_ingredients.py  test_page_fetch.py  test_sources.py  test_storage_search.py  test_sync.py  test_units.py
docs/: SAAS_PLAN.md
frontend/: CONTRIBUTING.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/ios/: README.md
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  AuthContext.tsx  EditorPage.tsx  HomePage.tsx  ImportPage.tsx  ImportProgressContext.tsx  IngredientCatalogContext.tsx  IngredientsPage.tsx  LoginPage.tsx  NativeBridge.tsx  RecipeDetailHeaderContext.tsx  RecipeEditPage.tsx  RecipeListContext.tsx  RecipePage.tsx  RecipeSyncContext.tsx  ReviewPage.tsx  SettingsPage.tsx  ThemeContext.tsx  (+23 more)
recipes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: backfill_recipe_images.py  batch_import.py  convert_cheftap_export.py  convert_recipes_to_grams.py  debug_import_url.py
(+41 files in other folders)
