[project]
name = "recipes"
version = "0.1.0"
description = "Cooklang filesystem recipe web app"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "itsdangerous>=2.2.0",
  "openai>=1.60.0",
  "pydantic-settings>=2.7.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "trafilatura>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.setuptools]
py-modules = []
